--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,10 +29,27 @@
 	<section class="section main-section even" id="portfolio-section" data-anchor="portfolio">
 		<div class="bg-clipper">
 			<div class="slide" id="maral">
-				<h1 class="hero-title mt-4 mb-0" data-animation="heroAnim"><a href="https://www.maral.fr" target="_blank">Maral.fr</a></h1>
+				<h1 class="hero-title mt-4 mb-0 col-12" data-animation="heroAnim"><a href="https://www.maral.fr" target="_blank">Maral.fr</a></h1>
 
 				<div class="portfolio-item row">
-					<div class="portfolio-info col-md-4 offset-md-1">
+					<div class="portfolio-thumbnail-wrapper col-lg-6 offset-lg-1">
+						<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" draggable="false" /></a>
+
+						<div class="skills-used-small">
+							<ul>
+								<li>NodeJS</li>
+								<li>API</li>
+								<li>Pwinty</li>
+								<li>Stripe</li>
+								<li>Bootstrap</li>
+							</ul>
+							<div class="skill-call-wrapper">
+								<a href="#skills" class="action-link m-auto">Skills</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="portfolio-info col-lg-4">
 						<p>
 							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b><a href="https://pwinty.com/" target="_blank">Pwinty API</a></b> to
 							automatically handle replicas orders. Clients can pay for their orders by card using the <b><a href="https://stripe.com/" target="_blank">Stripe API</a></b
@@ -44,20 +61,18 @@
 						</p>
 						<p>Includes an admin interface that allows the client to manage the content of the website and the orders very easily, with just a few clicks.</p>
 
-						<ul>
-							<li>NodeJS</li>
-							<li>API</li>
-							<li>Pwinty</li>
-							<li>Stripe</li>
-							<li>Bootstrap</li>
-						</ul>
-						<div class="skill-call-wrapper">
-							<a href="#skills" class="action-link m-auto">Skills</a>
+						<div class="skills-used-large">
+							<ul>
+								<li>NodeJS</li>
+								<li>API</li>
+								<li>Pwinty</li>
+								<li>Stripe</li>
+								<li>Bootstrap</li>
+							</ul>
+							<div class="skill-call-wrapper">
+								<a href="#skills" class="action-link m-auto">Skills</a>
+							</div>
 						</div>
-					</div>
-
-					<div class="portfolio-thumbnail-wrapper col-md-6">
-						<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" draggable="false" /></a>
 					</div>
 				</div>
 			</div>
