--- a/public/main.scss
+++ b/public/main.scss
@@ -1072,3 +1072,13 @@ select:-webkit-autofill {
 		}
 	}
 }
+
+@media (max-width: 540px) {
+	#skills-section {
+		.skills-section {
+			h2 {
+				font-size: 1.25em;
+			}
+		}
+	}
+}
