--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,9 +32,16 @@
 				<h1 class="hero-title mt-4 mb-0 col-12" data-animation="heroAnim"><a href="https://www.maral.fr" target="_blank">Maral.fr</a></h1>
 
 				<div class="portfolio-item row">
-					<div class="portfolio-thumbnail-wrapper col-lg-6 offset-lg-1">
-						<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" draggable="false" /></a>
-
+					<div class="portfolio-thumbnail-wrapper col-lg-3 offset-lg-2">
+						<!--	<a href="https://www.maral.fr" target="_blank"><img class="w-100" src="/img/maral_thumbnail.jpg" alt="Maral.fr Screenshot" draggable="false" /></a>
+-->
+						<div class="phone-wrapper phone-black">
+							<div class="phone-small-round-top"></div>
+							<div class="phone-round-top-left"></div>
+							<div class="phone-speaker"></div>
+							<img src="/img/maral_thumbnail2.png" draggable="false" class="phone-screenshot" />
+							<div class="phone-button"></div>
+						</div>
 						<div class="skills-used-small">
 							<ul>
 								<li>NodeJS</li>
@@ -49,7 +56,7 @@
 						</div>
 					</div>
 
-					<div class="portfolio-info col-lg-4">
+					<div class="portfolio-info col-lg-5">
 						<p>
 							An <b>e-commerce</b> website allowing customers to purchase paintings or replicas of these paintings using <b><a href="https://pwinty.com/" target="_blank">Pwinty API</a></b> to
 							automatically handle replicas orders. Clients can pay for their orders by card using the <b><a href="https://stripe.com/" target="_blank">Stripe API</a></b
