--- a/public/main.css
+++ b/public/main.css
@@ -397,17 +397,31 @@ select:-webkit-autofill {
 
 .hero h2 {
   color: #f1f1f1;
-  font-size: 30px;
   text-indent: 50px;
 }
 
 .hero h3 {
-  font-size: clamp(16px, 3vw, 22px);
   color: #f1f1f1;
   opacity: 0.9;
   margin-top: 7%;
   margin-left: 13%;
   margin-bottom: 15px;
+}
+
+.hero h3 {
+  font-size: 16px;
+}
+
+@media screen and (min-width: 320px) {
+  .hero h3 {
+    font-size: calc( 16px + 6 * ((100vw - 320px) / 1600));
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .hero h3 {
+    font-size: 22px;
+  }
 }
 
 .hero h3 b {
@@ -466,7 +480,6 @@ select:-webkit-autofill {
 }
 
 .hero-title {
-  font-size: clamp(75px, 9vw, 128px);
   /*font-weight: bold;*/
   font-family: "Noir" !important;
   color: #f34023;
@@ -475,6 +488,22 @@ select:-webkit-autofill {
   font-style: italic;
   display: inline-block;
   opacity: 1;
+}
+
+.hero-title {
+  font-size: 75px;
+}
+
+@media screen and (min-width: 320px) {
+  .hero-title {
+    font-size: calc( 75px + 53 * ((100vw - 320px) / 1600));
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .hero-title {
+    font-size: 128px;
+  }
 }
 
 .hero-title a {
@@ -488,10 +517,25 @@ select:-webkit-autofill {
 .hero-secondary-title {
   color: #000000 !important;
   opacity: 0.6;
-  font-size: clamp(40px, 5vw, 75px) !important;
   margin-top: 4.5rem;
   line-height: 3.5vw;
   line-height: clamp(35px, 4vw, 60px);
+}
+
+.hero-secondary-title {
+  font-size: 40px;
+}
+
+@media screen and (min-width: 320px) {
+  .hero-secondary-title {
+    font-size: calc( 40px + 35 * ((100vw - 320px) / 1600));
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .hero-secondary-title {
+    font-size: 75px;
+  }
 }
 
 #skills-section {
@@ -639,10 +683,25 @@ select:-webkit-autofill {
 
 #contact-section .contact-footer li {
   display: inline-block;
-  font-size: clamp(14px, 4vw, 26px);
   font-weight: bold;
   margin: 0 15px;
   text-align: right;
+}
+
+#contact-section .contact-footer li {
+  font-size: 14px;
+}
+
+@media screen and (min-width: 320px) {
+  #contact-section .contact-footer li {
+    font-size: calc( 14px + 12 * ((100vw - 320px) / 1600));
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  #contact-section .contact-footer li {
+    font-size: 26px;
+  }
 }
 
 #contact-section .contact-footer li span {
@@ -670,11 +729,76 @@ select:-webkit-autofill {
   height: 118%;
 }
 
+#portfolio-section .phone-wrapper {
+  display: inline-block;
+  margin: 30px 30px 30px 30px;
+  background-color: #f8f8f8;
+  border: 1px solid #c0c0c0;
+  padding: 0 10px 0 10px;
+  border-radius: 25px;
+  max-width: 100% !important;
+}
+
+#portfolio-section .phone-black {
+  background-color: #0c0c0c;
+  border-color: #1f1f1f;
+}
+
+#portfolio-section .phone-screenshot {
+  max-width: 260px;
+  border: 1px solid #000000;
+}
+
+#portfolio-section .phone-small-round-top {
+  margin: 10px auto;
+  width: 5px;
+  height: 5px;
+  background-color: #c0c0c0;
+  border-radius: 50%;
+}
+
+#portfolio-section .phone-round-top-left {
+  float: left;
+  margin-left: 65px;
+  margin-top: -2px;
+  width: 9px;
+  height: 9px;
+  background-color: #c0c0c0;
+  border-radius: 50%;
+}
+
+#portfolio-section .phone-speaker {
+  margin: 15px auto;
+  margin-top: 10px;
+  width: 30px;
+  height: 5px;
+  background-color: #c0c0c0;
+  border-radius: 3px;
+}
+
+#portfolio-section .phone-button {
+  border-radius: 50%;
+  margin: 10px auto;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #c0c0c0;
+  background: none !important;
+}
+
 #portfolio-section .hero-title {
   margin-bottom: -45px;
 }
 
 #portfolio-section .portfolio-thumbnail-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
@@ -686,12 +810,6 @@ select:-webkit-autofill {
   display: flex;
   padding: 10px;
   background-color: #dedddd;
-}
-
-#portfolio-section .portfolio-thumbnail-wrapper img {
-  margin: auto;
-  -webkit-clip-path: polygon(calc(100% - 50px) 0, 100% 50px, 100% 100%, 50px 100%, 0 calc(100% - 50px), 0 0);
-          clip-path: polygon(calc(100% - 50px) 0, 100% 50px, 100% 100%, 50px 100%, 0 calc(100% - 50px), 0 0);
 }
 
 #portfolio-section .portfolio-thumbnail-wrapper .skills-used-small {
@@ -757,8 +875,21 @@ select:-webkit-autofill {
 }
 
 #portfolio-section .portfolio-item .portfolio-info {
-  padding: 0 3rem 0 2rem;
+  padding: 30px 3rem 0 2rem;
   height: auto !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #portfolio-section .portfolio-item .portfolio-info:first-child {
